@@ -74,6 +74,8 @@ https://github.com/networkupstools/nut/milestone/10
    * Set the `DesktopFileName` in `scripts/python/app/NUT-Monitor-py3qt5`,
      this binds the application with the desktop file and allow the Desktop
      implementation to display the proper icon and application name. [#2205]
+   * Original recipe for `apc_modbus` strictly required USB support even if
+     building NUT without it. [#2262]
 
  - nut-usbinfo.pl, nut-scanner and libnutscan:
    * USB VendorID:ProductID support list files generated by the script for
